force-app/main/default/objects/Account/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <inlineHelpText>(From Abacus) Area for which the sales are reported by default.</inlineHelpText>
    <label>Reporting Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>ES, PT</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>HK</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>MY</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>Nordic</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>Rep. Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>