force-app/main/default/objects/Account/fields/Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region__c</fullName>
    <inlineHelpText>(From Abacus) Region for which sales are reported by default. Can be adapted in Abacus for each Order.</inlineHelpText>
    <label>Reporting Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>