force-app/main/default/objects/Account/fields/Reporting_Region_and_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Region_and_Area__c</fullName>
    <label>Reporting Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>