force-app/main/default/objects/Account/fields/Rigado_Activity__c.field-meta.xml
<CustomField>
    <fullName>Rigado_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for migration from Rigado Salesforce org</description>
    <inlineHelpText>Checked if this Rigado had activities with this account</inlineHelpText>
    <label>Rigado Activity</label>
    <type>Checkbox</type>
</CustomField>