force-app/main/default/objects/Account/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>u-blox Sales Admin responsible for this Account</description>
    <inlineHelpText>u-blox Sales Admin responsible for this Account</inlineHelpText>
    <label>Sales Operations</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>