force-app/main/default/objects/Account/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <description>Sales representative</description>
    <inlineHelpText>Sales representative who handles account. Leave empty if handled directly</inlineHelpText>
    <label>Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>