force-app/main/default/objects/Account/fields/Service_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Service_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IN_SF_MTC-476</description>
    <inlineHelpText>Sales Manager who supports the customer with Services products</inlineHelpText>
    <label>Service Sales Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>