force-app/main/default/objects/Account/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <inlineHelpText>Automatically generated number that is used to identify end customers in Abacus</inlineHelpText>
    <label>SF Account Number</label>
    <type>AutoNumber</type>
</CustomField>