force-app/main/default/objects/Account/fields/Share_in_UBXN__c.field-meta.xml
<CustomField>
    <fullName>Share_in_UBXN__c</fullName>
    <formula>Number_of_Shares__c / 7000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of owned shares</inlineHelpText>
    <label>Share in UBXN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>