force-app/main/default/objects/Account/fields/Share_Info__c.field-meta.xml
<CustomField>
    <fullName>Share_Info__c</fullName>
    <inlineHelpText>Are shares declared, estimated or in share book?</inlineHelpText>
    <label>Shareholding Infobase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>declared</fullName>
            </value>
            <value>
                <fullName>estimated</fullName>
            </value>
            <value>
                <fullName>Share book</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>