force-app/main/default/objects/Account/fields/Share_status__c.field-meta.xml
<CustomField>
    <fullName>Share_status__c</fullName>
    <label>Share status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>