force-app/main/default/objects/Account/fields/Shop_Purchase_Information__c.field-meta.xml
<CustomField>
    <fullName>Shop_Purchase_Information__c</fullName>
    <description>Concatenated from 3 shop order fields with a workflow after Lead conversion.</description>
    <inlineHelpText>Shop order information from lead conversion</inlineHelpText>
    <label>Shop Purchase Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>