force-app/main/default/objects/Account/fields/Solution_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Solution_Partner_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Partner Agreement</label>
    <type>Checkbox</type>
</CustomField>