force-app/main/default/objects/Account/fields/Thingstream_Domain__c.field-meta.xml
<CustomField>
    <fullName>Thingstream_Domain__c</fullName>
    <label>Thingstream Domain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>