force-app/main/default/objects/Account/fields/Total_Open_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Orders__c</fullName>
    <inlineHelpText>Sum of open orders in local currency</inlineHelpText>
    <label>Total Open Orders</label>
    <summarizedField>Billings__c.Total_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Billings__c.Order_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Billings__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>