force-app/main/default/objects/Account/fields/Town_next__c.field-meta.xml
<CustomField>
    <fullName>Town_next__c</fullName>
    <inlineHelpText>Town close to Account. Typically this is a town with airport.</inlineHelpText>
    <label>Town Next</label>
    <length>30</length>
    <type>Text</type>
</CustomField>