force-app/main/default/objects/Account/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <description>Made for Account mass transfer to filter</description>
    <inlineHelpText>Made for Account mass transfer to filter</inlineHelpText>
    <label>Transfer To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>