force-app/main/default/objects/Account/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <inlineHelpText>u-blox office that takes care of this account</inlineHelpText>
    <label>uB Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
                <color>#0B6FCE</color>
                <label>Americas</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <color>#78C953</color>
                <label>EMEA</label>
            </value>
            <value>
                <fullName>China</fullName>
                <color>#E27001</color>
                <label>China</label>
            </value>
            <value>
                <fullName>Hongkong</fullName>
                <color>#A845DC</color>
                <label>Hongkong</label>
            </value>
            <value>
                <fullName>Taiwan</fullName>
                <color>#F3D904</color>
                <label>Taiwan</label>
            </value>
            <value>
                <fullName>Korea</fullName>
                <color>#A53711</color>
                <label>Korea</label>
            </value>
            <value>
                <fullName>Japan</fullName>
                <color>#66E9BD</color>
                <label>Japan</label>
            </value>
            <value>
                <fullName>India</fullName>
                <color>#006600</color>
                <label>India</label>
            </value>
            <value>
                <fullName>Australia</fullName>
                <color>#B6E32E</color>
                <label>Australia</label>
            </value>
            <value>
                <fullName>Rest of APAC</fullName>
                <color>#0B24BE</color>
                <label>Rest of APAC</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#999999</color>
                <label>Corporate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>