force-app/main/default/objects/Account/fields/Value_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Shares__c</fullName>
    <label>Value of Shares (M USD)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>