force-app/main/default/objects/Account/fields/Visiting_Address_changed__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Address_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is triggered by changes in the visiting (billing) address of the account, requiring a change in the related contacts. It is set by a workflow in the account record. An APEX Trigger/Class sets the Visiting Address changed flag in the related Contact records.</description>
    <label>Visiting Address changed</label>
    <type>Checkbox</type>
</CustomField>