force-app/main/default/objects/Account/fields/Voting_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Voting_Behavior__c</fullName>
    <label>Voting Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>independent</fullName>
            </value>
            <value>
                <fullName>supported by proxy-advisor</fullName>
            </value>
            <value>
                <fullName>through proxy-advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>