force-app/main/default/objects/Account/fields/Watchlist__c.field-meta.xml
<CustomField>
    <fullName>Watchlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In watch mode</label>
    <type>Checkbox</type>
</CustomField>