force-app/main/default/objects/Account/fields/Website_Checked__c.field-meta.xml
<CustomField>
    <fullName>Website_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer website must be checked if ECCN is applicable to check the end use / user</description>
    <inlineHelpText>If ECCN is applicable, then must check the customer website for end use / user of a product</inlineHelpText>
    <label>Customer Website Checked</label>
    <type>Checkbox</type>
</CustomField>