force-app/main/default/objects/Account/fields/Website_Checked_Date__c.field-meta.xml
<CustomField>
    <fullName>Website_Checked_Date__c</fullName>
    <label>Website Checked Date</label>
    <type>Date</type>
</CustomField>