force-app/main/default/objects/Account/fields/Website_Checked_Period__c.field-meta.xml
<CustomField>
    <fullName>Website_Checked_Period__c</fullName>
    <formula>(TODAY() - Website_Checked_Date__c) / 365 * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Checked Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>