force-app/main/default/objects/Account/fields/X4M_Wireless_Activity__c.field-meta.xml
<CustomField>
    <fullName>X4M_Wireless_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sales history with 4M Wireless available.</inlineHelpText>
    <label>4M Wireless Activity</label>
    <type>Checkbox</type>
</CustomField>