force-app/main/default/objects/Account/recordTypes/Account_Media.recordType-meta.xml
<RecordType>
    <fullName>Account_Media</fullName>
    <active>true</active>
    <description>Used exclusively for media Accounts handled by BM</description>
    <label>Account Media</label>
</RecordType>