force-app/main/default/objects/Account/recordTypes/Leadenhancer.recordType-meta.xml
<RecordType>
    <fullName>Leadenhancer</fullName>
    <active>true</active>
    <description>Used to test Accounts for testing Leadenhancer</description>
    <label>Leadenhancer</label>
</RecordType>