force-app/main/default/objects/Account/recordTypes/Legal.recordType-meta.xml
<RecordType>
    <fullName>Legal</fullName>
    <active>true</active>
    <description>Used exclusively for Accounts handled by Legal</description>
    <label>Legal</label>
</RecordType>