force-app/main/default/objects/Account/validationRules/Account_is_in_restricted_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_is_in_restricted_country</fullName>
    <active>true</active>
    <errorConditionFormula>IsRestrictedCountry__c</errorConditionFormula>
    <errorMessage>The submitted account can&apos;t be created as it is located in one of the restricted countries!</errorMessage>
</ValidationRule>