force-app/main/default/objects/Account/validationRules/Cant_change_reporting_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_reporting_fields</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
Customer_No__c != &apos;&apos;,
AND(
$User.Id != &apos;0052p00000Az9kv&apos;,
$User.Id != Owner.Id,
$User.Id != New_Channel_Manager__r.Id,
$User.ProfileId != &apos;00e20000000ki5l&apos;,
$User.ProfileId != &apos;00e57000001AvLd&apos;,
OR(ISCHANGED(Reporting_Area__c),ISCHANGED(Reporting_Region__c)),
Customer_No__c = &apos;&apos;
)
)</errorConditionFormula>
    <errorMessage>Reporting fields are taken from Abacus or you don&apos;t have permission to modify the fields.</errorMessage>
</ValidationRule>