force-app/main/default/objects/Account/validationRules/Country_must_be_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_must_be_selected</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

OR(
ISNEW(),
ISCHANGED(BillingCountry)
),

ISBLANK(BillingCountry)
)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please select country.</errorMessage>
</ValidationRule>