force-app/main/default/objects/Account/validationRules/Country_should_follow_ISO_3166_1_Alpha2.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_should_follow_ISO_3166_1_Alpha2</fullName>
    <active>false</active>
    <description>Check in Record Type &quot;Regular&quot; is Visiting Country is in 2-alphabet ISO code.</description>
    <errorConditionFormula>(
	OR(
		LEN(BillingCountry) &lt;&gt; 2,
		BillingCountry&lt;&gt;UPPER(BillingCountry),
		NOT(REGEX(BillingCountry,&quot;^[a-z  A-Z]*$&quot;)),
		1 = CASE(
			BillingCountry,
			&quot;UK&quot;,1,
			&quot;AB&quot;,1,
			&quot;AX&quot;,1,
			&quot;BC&quot;,1,
			&quot;BQ&quot;,1,
			&quot;CE&quot;,1,
			&quot;EN&quot;,1,
			&quot;EU&quot;,1,
			&quot;FL&quot;,1,
			&quot;FU&quot;,1,
			&quot;FZ&quot;,1,
			&quot;GP&quot;,1,
			&quot;JA&quot;,1,
			&quot;JN&quot;,1,
			&quot;KO&quot;,1,
			&quot;LX&quot;,1,
			&quot;MQ&quot;,1,
			&quot;NV&quot;,1,
			&quot;NY&quot;,1,
			&quot;ON&quot;,1,
			&quot;PO&quot;,1,
			&quot;RF&quot;,1,
			&quot;SP&quot;,1,
			&quot;SW&quot;,1,
			&quot;UE&quot;,1,
			&quot;UM&quot;,1,
			&quot;UR&quot;,1,
			&quot;UT&quot;,1,
			&quot;WA&quot;,1,
			&quot;XX&quot;,1,
			&quot;ZK&quot;,1,
			0
		)
	)
) &amp;&amp; 
RecordTypeId = &quot;01257000000Be12&quot; &amp;&amp; $User.ProfileId != &quot;00e20000000xThb&quot; &amp;&amp; $User.ProfileId != &quot;00e20000000ki5l&quot;</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Country must be in 2-letter uppercase ISO code format. For UK, use GB.</errorMessage>
</ValidationRule>