force-app/main/default/objects/Account/validationRules/Finance_Account_Country_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Account_Country_Check</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND(RecordType.DeveloperName  = &quot;Finance&quot;,  ISBLANK(BillingCountry)),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please select country.</errorMessage>
</ValidationRule>