force-app/main/default/objects/Account/validationRules/ISO_code_check.validationRule-meta.xml
<ValidationRule>
    <fullName>ISO_code_check</fullName>
    <active>false</active>
    <description>Check that the country is entered as a valid 2-letter ISO code</description>
    <errorConditionFormula>and(len(BillingCountry) &lt;&gt; 2, len(BillingCountry)&gt;0)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Use 2-letter country code according to ISO 3166</errorMessage>
</ValidationRule>