force-app/main/default/objects/Account/validationRules/Priority_selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_selection</fullName>
    <active>true</active>
    <description>To limit selection of Priority for distributors (A and B not selectable)</description>
    <errorConditionFormula>ISCHANGED( Priority__c ) &amp;&amp;
($User.ProfileId = &quot;00eD00000015ehS&quot; || $User.ProfileId = &quot;00eD00000015UEf&quot; || $User.ProfileId = &quot;00eD00000016DpY&quot; || $User.ProfileId = &quot;00eD000000160Nk&quot; || $User.ProfileId = &quot;00eD000000160IL&quot;) &amp;&amp;
( text(Priority__c) = &quot;A&quot; || text(Priority__c) = &quot;B&quot; )</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Priority A and B should be selected by u-blox.</errorMessage>
</ValidationRule>