force-app/main/default/objects/Account/validationRules/Restrict_embargo_countries.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_embargo_countries</fullName>
    <active>false</active>
    <description>restrict creating new accounts in embargo countries:
Iran, Cuba, Syria, North Korea, Sudan, Belarus and Russia</description>
    <errorConditionFormula>AND(
ISNEW(),
OR(
BillingCountry == &apos;IR&apos;,
BillingCountry == &apos;CU&apos;,
BillingCountry == &apos;SY&apos;,
BillingCountry == &apos;KP&apos;,
BillingCountry == &apos;SD&apos;,
BillingCountry == &apos;BY&apos;,
BillingCountry == &apos;RU&apos;,
ShippingCountry == &apos;IR&apos;,
ShippingCountry == &apos;CU&apos;,
ShippingCountry == &apos;SY&apos;,
ShippingCountry == &apos;KP&apos;,
ShippingCountry == &apos;SD&apos;,
ShippingCountry == &apos;BY&apos;,
ShippingCountry == &apos;RU&apos;
))</errorConditionFormula>
    <errorMessage>Account creation is not allowed for embargo countries</errorMessage>
</ValidationRule>