force-app/main/default/objects/Account/listViews/All_accounts.listView-meta.xml
<ListView>
    <fullName>All_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Distributor__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>New_Application_Type__c</field>
        <operation>equals</operation>
        <value>&quot;Tracking, telematics&quot;</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_COUNTRY</field>
        <operation>equals</operation>
        <value>sg</value>
    </filters>
    <label>All accounts</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>