force-app/main/default/objects/Account/listViews/All_Accounts_22.listView-meta.xml
<ListView>
    <fullName>All_Accounts_22</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Distributor__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Regular</value>
    </filters>
    <label>All Accounts</label>
    <sharedTo>
        <group>All_u_blox_Internal_Users</group>
    </sharedTo>
</ListView>