force-app/main/default/objects/Account/listViews/All_accounts_More_Electronics.listView-meta.xml
<ListView>
    <fullName>All_accounts_More_Electronics</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Prev_Owner_Contact__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All accounts More Electronics</label>
    <sharedTo>
        <roleAndSubordinates>Partner_More_Electronics</roleAndSubordinates>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>