force-app/main/default/objects/Account/listViews/All_accounts_patners.listView-meta.xml
<ListView>
    <fullName>All_accounts_patners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>a4a_Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>Partner Accounts</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>