force-app/main/default/objects/Account/listViews/All_accounts_Spezial_Electronic.listView-meta.xml
<ListView>
    <fullName>All_accounts_Spezial_Electronic</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>selec,spfae</value>
    </filters>
    <label>All accounts Spezial Electronic</label>
    <sharedTo>
        <roleAndSubordinates>Partner_Spezial_Electronic</roleAndSubordinates>
        <roleAndSubordinatesInternal>RegionEMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>