force-app/main/default/objects/Account/listViews/All_Finance.listView-meta.xml
<ListView>
    <fullName>All_Finance</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Distributor__c</columns>
    <columns>Distributor_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>New_Application_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>SF_Account_Number__c</columns>
    <columns>Billings_YTD__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Finance</value>
    </filters>
    <label>All Finance Accounts</label>
    <sharedTo>
        <group>Business_Marketing</group>
        <group>Finance_Partners</group>
    </sharedTo>
</ListView>