force-app/main/default/objects/Account/listViews/America_s_C_X_Accounts.listView-meta.xml
<ListView>
    <fullName>America_s_C_X_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>americas</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>C,X</value>
    </filters>
    <label>America&apos;s C &amp; X Accounts</label>
    <sharedTo>
        <group>Sales_Americas</group>
    </sharedTo>
</ListView>